Bug 278290 - GPS Correlator is disabled (grayed) after loading gpx files
Summary: GPS Correlator is disabled (grayed) after loading gpx files
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Geolocation-Correlator (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-07-22 19:03 UTC by Olivier Kes
Modified: 2017-08-18 19:29 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.0.0
Sentry Crash Report:


Attachments
The disabled correlator (40.26 KB, image/png)
2011-07-22 19:13 UTC, Olivier Kes
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Olivier Kes 2011-07-22 19:03:33 UTC
Version:           2.0.0 (using KDE 4.6.0) 
OS:                Linux

When loading a large GPX file in GPS Correlator, the panel remains disabled.
With a small file, it is disabled while loading, and then enabled again.

If I renice digikam process to the lowest priority before loading the file, then it works.

Reproducible: Always

Steps to Reproduce:
Load a large GPX file

Actual Results:  
The panel is disabled (grayed)

Expected Results:  
The pannel should be enabled

OS: Linux (i686) release 2.6.37.6-0.5-default
Compiler: gcc

Information for package digikam-bundled:
Repository: @System
Name: digikam-bundled
Version: 2.0.0rc-17.1
Arch: i586
Vendor: obs://build.opensuse.org/home:sergeyopensuse
Comment 1 Olivier Kes 2011-07-22 19:13:19 UTC
Created attachment 62098 [details]
The disabled correlator

Though the file is properly loaded, all the commands for correlation are disabled. I can only close the window and open it again.
Comment 2 Marcel Wiesweg 2011-07-23 12:10:30 UTC
Sounds like some problem with signals from the threaded loading, just guessing.

How large in MB is "large"?
Comment 3 Olivier Kes 2011-07-23 14:59:13 UTC
Not that large, actually. With my Acer Aspire 1652 Wlmi, Intel Pentium M 740 (1,7 GHz), I could load small tracks of ~100ko, but not much more.

When lowering the priority of digikam, I was able to load files over 10Mo.
Comment 4 Michael G. Hansen 2011-07-25 19:34:27 UTC
Hi Olivier,

I can reproduce your problem when booting my quadcore with the 'NOSMP' kernel option, making it effectively a one core system and will look into it.

Michael
Comment 5 Michael G. Hansen 2011-07-25 19:59:18 UTC
Git commit c4f9626f162ed9e642de15d92dc3d0f8b1f7ef99 by Michael Georg Hansen.
Committed on 25/07/2011 at 21:56.
Pushed by mghansen into branch 'master'.

Properly detect when the QFutureWatcher reports that loading of the GPX files has been completed.

BUG: 278290

M  +1    -0    gpssync/gpsdataparser.h
M  +2    -1    NEWS
M  +8    -6    gpssync/gpsdataparser.cpp

http://commits.kde.org/kipi-plugins/c4f9626f162ed9e642de15d92dc3d0f8b1f7ef99
Comment 6 Olivier Kes 2011-07-25 21:48:19 UTC
Great, thanks Michael !