Properly detect when the QFutureWatcher reports that loading of the GPX files has been completed.

BUG: 278290